<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddItemActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginHorizontal="20dp">

            <TextView
                android:id="@+id/itemNameHelper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/required"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="12sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/itemNameContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/itemName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/itemName"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    tools:ignore="TextContrastCheck,TextContrastCheck,TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:id="@+id/itemTypeContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/spinnerHelper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/required"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/itemTypeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_a_type_text" />

                <Spinner
                    android:id="@+id/itemTypeSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="94dp"
                    android:contentDescription="@string/spinnerTypeDescriptor" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:helperTextTextColor="@android:color/darker_gray"
                app:layout_constraintBottom_toTopOf="@id/add_item_button"
                android:layout_marginTop="10dp">

                <androidx.constraintlayout.widget.Barrier
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="left"
                    tools:layout_editor_absoluteX="48dp"
                    tools:layout_editor_absoluteY="100dp" />

                <EditText
                    android:id="@+id/itemDescription"
                    android:layout_width="match_parent"
                    android:layout_height="104dp"
                    android:autofillHints=""
                    android:gravity="top|start"
                    android:hint="@string/item_description"
                    android:inputType="textMultiLine"
                    android:maxLines="5"
                    android:textColorHint="#616161"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/add_item_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/App.Button"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/addButton"
                app:cornerRadius="20dp"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/add_nfc_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/App.Button"
                android:layout_marginTop="10dp"
                app:cornerRadius="20dp"
                android:text="@string/add_with_nfc" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>