...
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        android:tint="@android:color/white"
        tools:ignore="RtlHardcoded" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/items_listview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="?attr/actionBarSize"
...
